export const snapshot = {};

snapshot[`Issue Create Command - Help Text 1`] = `
stdout:
\`
Usage: create

Description:

  Create a linear issue

Options:

  -h, --help                                - Show this help.                                                                   
  --start                                   - Start the issue after creation                                                    
  -a, --assignee             <assignee>     - Assign the issue to 'self' or someone (by username or name)                       
  --due-date                 <dueDate>      - Due date of the issue                                                             
  --parent                   <parent>       - Parent issue (if any) as a team_number code                                       
  -p, --priority             <priority>     - Priority of the issue (1-4, descending priority)                                  
  --estimate                 <estimate>     - Points estimate of the issue                                                      
  -d, --description          <description>  - Description of the issue (prefer --description-file for markdown)                 
  --description-file         <path>         - Read description from a file (preferred for markdown content)                     
  --context-file             <path>         - Read a normalized external context JSON envelope from a file.                     
  --apply-triage                            - Apply deterministic triage hints from --context-file when routing fields are      
                                              omitted.                                                                          
  --autonomy-policy          <policy>       - Gate source-adjacent intake to suggest-only, preview-required, or apply-allowed.  
  -l, --label                <label>        - Issue label associated with the issue. May be repeated.                           
  --team                     <team>         - Team associated with the issue (if not your default team)                         
  --project                  <project>      - Name or slug ID of the project with the issue                                     
  -s, --state                <state>        - Workflow state for the issue (by name or type)                                    
  --milestone                <milestone>    - Name of the project milestone                                                     
  --cycle                    <cycle>        - Cycle name, number, or 'active'                                                   
  -j, --json                                - Force machine-readable JSON output                                                
  --text                                    - Output human-readable text                                                        
  --dry-run                                 - Preview the created issue without creating it                                     
  --timeout-ms               <timeoutMs>    - Timeout for write confirmation in milliseconds                                    
  --no-pager                                - Accepted for compatibility; issue create does not use a pager                     
  --no-use-default-template                 - Do not use default template for the issue                                         
  -i, --interactive                         - Enable interactive prompts and editor flow                                        
  --no-interactive                          - Accepted for compatibility; issue create is non-interactive by default            
  -t, --title                <title>        - Title of the issue                                                                

Examples:

  Create an issue as JSON                                   linear issue create --title "Fix auth expiry bug" --team ENG                                        
  Create an issue with a piped description                  cat description.md | linear issue create --title "Fix auth expiry bug" --team ENG                   
  Create an issue from a normalized source context file     linear issue create --team ENG --context-file slack-thread.json --dry-run --json                    
  Apply deterministic triage from normalized source context linear issue create --context-file slack-thread.json --apply-triage --dry-run --json                
  Preview source-intake suggestions without applying them   linear issue create --context-file slack-thread.json --autonomy-policy suggest-only --dry-run --json
  Create an issue with human-readable output                linear issue create --title "Fix auth expiry bug" --team ENG --text                                 
  Preview issue creation                                    linear issue create --title "Fix auth expiry bug" --team ENG --state started --dry-run              

\`
stderr:
""
`;

snapshot[`Issue Create Command - Happy Path 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-123/fix-authentication-bug
"
stderr:
""
`;

snapshot[`Issue Create Command - JSON Output 1`] = `
stdout:
'{
  "id": "issue-new-json",
  "identifier": "ENG-321",
  "title": "Bot-created issue",
  "url": "https://linear.app/test-team/issue/ENG-321/bot-created-issue",
  "dueDate": "2026-03-31",
  "assignee": {
    "id": "user-self-123",
    "name": "alice.bot",
    "displayName": "Alice Bot",
    "initials": "AB"
  },
  "parent": {
    "id": "parent-issue-id",
    "identifier": "ENG-220",
    "title": "Parent Issue",
    "url": "https://linear.app/test-team/issue/ENG-220/parent-issue",
    "dueDate": null,
    "state": {
      "name": "Backlog",
      "color": "#bec2c8"
    }
  },
  "state": {
    "name": "In Progress",
    "color": "#f87462"
  },
  "receipt": {
    "operationId": "issue.create",
    "resource": "issue",
    "action": "create",
    "resolvedRefs": {
      "issueIdentifier": "ENG-321",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-220",
      "state": "In Progress",
      "sourceSystem": null,
      "sourceRef": null
    },
    "appliedChanges": [
      "title",
      "description",
      "assignee",
      "dueDate",
      "parent",
      "state"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Created issue ENG-321",
    "refs": {
      "issueIdentifier": "ENG-321",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-220",
      "state": "In Progress",
      "sourceSystem": null,
      "sourceRef": null
    },
    "changes": [
      "title",
      "description",
      "assignee",
      "dueDate",
      "parent",
      "state"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Dry Run 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would create issue in ENG",
  "data": {
    "command": "issue.create",
    "start": false,
    "team": {
      "id": "team-eng-id",
      "key": "ENG"
    },
    "project": {
      "id": null,
      "nameOrSlug": null
    },
    "input": {
      "title": "Bot-created issue",
      "description": "Created from automation",
      "assigneeId": "user-self-123",
      "dueDate": "2026-03-31",
      "parent": {
        "id": "parent-issue-id",
        "identifier": "ENG-220",
        "title": "Parent Issue"
      },
      "priority": null,
      "estimate": null,
      "labelIds": [],
      "teamId": "team-eng-id",
      "projectId": null,
      "projectMilestoneId": null,
      "cycleId": null,
      "stateId": "state-started",
      "useDefaultTemplate": true
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Would create issue in ENG",
    "refs": {
      "teamKey": "ENG",
      "project": null,
      "parentIssueIdentifier": "ENG-220",
      "sourceSystem": null,
      "sourceRef": null
    },
    "changes": [
      "title",
      "description",
      "assigneeId",
      "dueDate",
      "parent",
      "priority",
      "estimate",
      "labelIds",
      "teamId",
      "projectId",
      "projectMilestoneId",
      "cycleId",
      "stateId",
      "useDefaultTemplate"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Dry Run With Context File 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would create issue in ENG",
  "data": {
    "command": "issue.create",
    "start": false,
    "team": {
      "id": "team-eng-id",
      "key": "ENG"
    },
    "project": {
      "id": null,
      "nameOrSlug": null
    },
    "input": {
      "title": "Customer reports auth refresh failures",
      "description": "## Source Context\\\\n- System: slack\\\\n- Ref: C12345:1712382000.100200\\\\n- URL: https://example.slack.com/archives/C12345/p1712382000100200\\\\n- Captured At: 2026-04-12T10:00:00Z\\\\n\\\\n### Title\\\\nCustomer reports auth refresh failures\\\\n\\\\n### Summary\\\\nA customer thread reports repeated auth refresh failures after the latest deploy.\\\\n\\\\n### Text Blocks\\\\n#### Initial report (alice, 2026-04-12T09:58:00Z)\\\\nMultiple customers say refresh tokens fail after 30 minutes.\\\\n#### Support follow-up (bob, 2026-04-12T09:59:00Z)\\\\nLogs point to the new auth rollout in production.\\\\n\\\\n### Participants\\\\n- Alice Agent @alice (reporter)\\\\n- Bob Support @bob (support)\\\\n\\\\n### Attachments\\\\n- auth-refresh.log (text/plain)\\\\n  URL: https://example.com/auth-refresh.log\\\\n\\\\n### Metadata\\\\n- customerId: cust_123\\\\n- severity: high\\\\n",
      "assigneeId": null,
      "dueDate": null,
      "parent": null,
      "priority": null,
      "estimate": null,
      "labelIds": [],
      "teamId": "team-eng-id",
      "projectId": null,
      "projectMilestoneId": null,
      "cycleId": null,
      "stateId": null,
      "useDefaultTemplate": true
    },
    "sourceContext": {
      "version": "v1",
      "target": "description",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "title": null,
      "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
      "participantCount": 2,
      "textBlockCount": 2,
      "attachmentCount": 1,
      "metadataKeys": [
        "customerId",
        "severity"
      ]
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Would create issue in ENG",
    "refs": {
      "teamKey": "ENG",
      "project": null,
      "parentIssueIdentifier": null,
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "title",
      "description",
      "assigneeId",
      "dueDate",
      "parent",
      "priority",
      "estimate",
      "labelIds",
      "teamId",
      "projectId",
      "projectMilestoneId",
      "cycleId",
      "stateId",
      "useDefaultTemplate"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Output With Context File 1`] = `
stdout:
'{
  "id": "issue-new-context",
  "identifier": "ENG-777",
  "title": "Customer reports auth refresh failures",
  "url": "https://linear.app/test-team/issue/ENG-777/customer-reports-auth-refresh-failures",
  "dueDate": null,
  "assignee": null,
  "parent": null,
  "state": null,
  "sourceContext": {
    "version": "v1",
    "target": "description",
    "source": {
      "system": "slack",
      "ref": "C12345:1712382000.100200",
      "url": "https://example.slack.com/archives/C12345/p1712382000100200",
      "title": "Customer reports auth refresh failures",
      "capturedAt": "2026-04-12T10:00:00Z"
    },
    "title": null,
    "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
    "participantCount": 2,
    "textBlockCount": 2,
    "attachmentCount": 1,
    "metadataKeys": [
      "customerId",
      "severity"
    ]
  },
  "autonomyPolicy": {
    "family": "source_intake_autonomy_policy",
    "version": "v1",
    "selected": "apply-allowed",
    "semantics": {
      "requiresDryRun": false,
      "allowsMutation": true,
      "allowsTriageApply": true
    }
  },
  "receipt": {
    "operationId": "issue.create",
    "resource": "issue",
    "action": "create",
    "resolvedRefs": {
      "issueIdentifier": "ENG-777",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": null,
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "appliedChanges": [
      "title",
      "description"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "sourceProvenance": {
      "version": "v1",
      "target": "description",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "contextIds": {
        "customerId": "cust_123"
      },
      "evidenceRefs": [
        "https://example.com/auth-refresh.log"
      ],
      "relatedUrls": [
        "https://example.slack.com/archives/C12345/p1712382000100200",
        "https://example.com/auth-refresh.log"
      ],
      "participantHandles": [
        "alice",
        "bob"
      ],
      "metadataKeys": [
        "customerId",
        "severity"
      ],
      "triage": {
        "applied": false,
        "team": "ENG",
        "state": "triage",
        "labels": [
          "customer",
          "incident"
        ],
        "duplicateIssueRefs": [
          "ENG-88"
        ],
        "relatedIssueRefs": [
          "ENG-42"
        ]
      }
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Created issue ENG-777",
    "refs": {
      "issueIdentifier": "ENG-777",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": null,
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "title",
      "description"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Dry Run With Applied Triage 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would create issue in ENG",
  "data": {
    "command": "issue.create",
    "start": false,
    "team": {
      "id": "team-eng-id",
      "key": "ENG"
    },
    "project": {
      "id": null,
      "nameOrSlug": null
    },
    "input": {
      "title": "Customer reports auth refresh failures",
      "description": "## Source Context\\\\n- System: slack\\\\n- Ref: C12345:1712382000.100200\\\\n- URL: https://example.slack.com/archives/C12345/p1712382000100200\\\\n- Captured At: 2026-04-12T10:00:00Z\\\\n\\\\n### Title\\\\nCustomer reports auth refresh failures\\\\n\\\\n### Summary\\\\nA customer thread reports repeated auth refresh failures after the latest deploy.\\\\n\\\\n### Text Blocks\\\\n#### Initial report (alice, 2026-04-12T09:58:00Z)\\\\nMultiple customers say refresh tokens fail after 30 minutes.\\\\n#### Support follow-up (bob, 2026-04-12T09:59:00Z)\\\\nLogs point to the new auth rollout in production.\\\\n\\\\n### Participants\\\\n- Alice Agent @alice (reporter)\\\\n- Bob Support @bob (support)\\\\n\\\\n### Attachments\\\\n- auth-refresh.log (text/plain)\\\\n  URL: https://example.com/auth-refresh.log\\\\n\\\\n### Metadata\\\\n- customerId: cust_123\\\\n- severity: high\\\\n",
      "assigneeId": null,
      "dueDate": null,
      "parent": null,
      "priority": null,
      "estimate": null,
      "labelIds": [
        "label-customer",
        "label-incident"
      ],
      "teamId": "team-eng-id",
      "projectId": null,
      "projectMilestoneId": null,
      "cycleId": null,
      "stateId": "state-triage",
      "useDefaultTemplate": true
    },
    "sourceContext": {
      "version": "v1",
      "target": "description",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "title": null,
      "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
      "participantCount": 2,
      "textBlockCount": 2,
      "attachmentCount": 1,
      "metadataKeys": [
        "customerId",
        "severity"
      ]
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    },
    "triage": {
      "family": "source_intake_triage",
      "version": "v1",
      "target": "issue.create",
      "applyRequested": true,
      "autonomyPolicy": {
        "family": "source_intake_autonomy_policy",
        "version": "v1",
        "selected": "apply-allowed",
        "semantics": {
          "requiresDryRun": false,
          "allowsMutation": true,
          "allowsTriageApply": true
        }
      },
      "appliedChanges": [
        "team",
        "state",
        "labels"
      ],
      "suggestions": {
        "team": {
          "requested": "ENG",
          "status": "resolved",
          "resolved": {
            "id": "team-eng-id",
            "key": "ENG",
            "name": "Engineering"
          },
          "applied": true,
          "reason": null
        },
        "state": {
          "requested": "triage",
          "status": "resolved",
          "resolved": {
            "id": "state-triage",
            "name": "Triage",
            "type": "triage",
            "color": "#f2c94c"
          },
          "applied": true,
          "reason": null
        },
        "labels": [
          {
            "requested": "customer",
            "status": "resolved",
            "resolved": {
              "id": "label-customer",
              "name": "customer",
              "color": "#f87462"
            },
            "applied": true,
            "reason": null
          },
          {
            "requested": "incident",
            "status": "resolved",
            "resolved": {
              "id": "label-incident",
              "name": "incident",
              "color": "#f2c94c"
            },
            "applied": true,
            "reason": null
          }
        ],
        "duplicateCandidates": [
          {
            "requested": "ENG-88",
            "status": "resolved",
            "resolved": {
              "id": "issue-88",
              "identifier": "ENG-88",
              "title": "Previous auth bug",
              "url": "https://linear.app/test-team/issue/ENG-88/previous-auth-bug",
              "state": {
                "name": "Done",
                "color": "#68cc58"
              }
            },
            "reason": null
          }
        ],
        "relatedIssues": [
          {
            "requested": "ENG-42",
            "status": "resolved",
            "resolved": {
              "id": "issue-42",
              "identifier": "ENG-42",
              "title": "Auth incident follow-up",
              "url": "https://linear.app/test-team/issue/ENG-42/auth-incident-follow-up",
              "state": {
                "name": "In Progress",
                "color": "#f87462"
              }
            },
            "reason": null
          }
        ]
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Would create issue in ENG",
    "refs": {
      "teamKey": "ENG",
      "project": null,
      "parentIssueIdentifier": null,
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "title",
      "description",
      "assigneeId",
      "dueDate",
      "parent",
      "priority",
      "estimate",
      "labelIds",
      "teamId",
      "projectId",
      "projectMilestoneId",
      "cycleId",
      "stateId",
      "useDefaultTemplate"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Dry Run With Suggest-Only Autonomy Policy 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would create issue in ENG",
  "data": {
    "command": "issue.create",
    "start": false,
    "team": {
      "id": "team-eng-id",
      "key": "ENG"
    },
    "project": {
      "id": null,
      "nameOrSlug": null
    },
    "input": {
      "title": "Customer reports auth refresh failures",
      "description": "## Source Context\\\\n- System: slack\\\\n- Ref: C12345:1712382000.100200\\\\n- URL: https://example.slack.com/archives/C12345/p1712382000100200\\\\n- Captured At: 2026-04-12T10:00:00Z\\\\n\\\\n### Title\\\\nCustomer reports auth refresh failures\\\\n\\\\n### Summary\\\\nA customer thread reports repeated auth refresh failures after the latest deploy.\\\\n\\\\n### Text Blocks\\\\n#### Initial report (alice, 2026-04-12T09:58:00Z)\\\\nMultiple customers say refresh tokens fail after 30 minutes.\\\\n#### Support follow-up (bob, 2026-04-12T09:59:00Z)\\\\nLogs point to the new auth rollout in production.\\\\n\\\\n### Participants\\\\n- Alice Agent @alice (reporter)\\\\n- Bob Support @bob (support)\\\\n\\\\n### Attachments\\\\n- auth-refresh.log (text/plain)\\\\n  URL: https://example.com/auth-refresh.log\\\\n\\\\n### Metadata\\\\n- customerId: cust_123\\\\n- severity: high\\\\n",
      "assigneeId": null,
      "dueDate": null,
      "parent": null,
      "priority": null,
      "estimate": null,
      "labelIds": [],
      "teamId": "team-eng-id",
      "projectId": null,
      "projectMilestoneId": null,
      "cycleId": null,
      "stateId": null,
      "useDefaultTemplate": true
    },
    "sourceContext": {
      "version": "v1",
      "target": "description",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "title": null,
      "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
      "participantCount": 2,
      "textBlockCount": 2,
      "attachmentCount": 1,
      "metadataKeys": [
        "customerId",
        "severity"
      ]
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "suggest-only",
      "semantics": {
        "requiresDryRun": true,
        "allowsMutation": false,
        "allowsTriageApply": false
      }
    },
    "triage": {
      "family": "source_intake_triage",
      "version": "v1",
      "target": "issue.create",
      "applyRequested": false,
      "autonomyPolicy": {
        "family": "source_intake_autonomy_policy",
        "version": "v1",
        "selected": "suggest-only",
        "semantics": {
          "requiresDryRun": true,
          "allowsMutation": false,
          "allowsTriageApply": false
        }
      },
      "appliedChanges": [],
      "suggestions": {
        "team": {
          "requested": "ENG",
          "status": "resolved",
          "resolved": {
            "id": "team-eng-id",
            "key": "ENG",
            "name": "Engineering"
          },
          "applied": false,
          "reason": "Explicit --team overrides the triage team suggestion."
        },
        "state": {
          "requested": "triage",
          "status": "resolved",
          "resolved": {
            "id": "state-triage",
            "name": "Triage",
            "type": "triage",
            "color": "#f2c94c"
          },
          "applied": false,
          "reason": "Pass --apply-triage to apply this suggestion."
        },
        "labels": [
          {
            "requested": "customer",
            "status": "resolved",
            "resolved": {
              "id": "label-customer",
              "name": "customer",
              "color": "#f87462"
            },
            "applied": false,
            "reason": "Pass --apply-triage to apply this suggestion."
          },
          {
            "requested": "incident",
            "status": "resolved",
            "resolved": {
              "id": "label-incident",
              "name": "incident",
              "color": "#f2c94c"
            },
            "applied": false,
            "reason": "Pass --apply-triage to apply this suggestion."
          }
        ],
        "duplicateCandidates": [
          {
            "requested": "ENG-88",
            "status": "resolved",
            "resolved": {
              "id": "issue-88",
              "identifier": "ENG-88",
              "title": "Previous auth bug",
              "url": "https://linear.app/test-team/issue/ENG-88/previous-auth-bug",
              "state": {
                "name": "Done",
                "color": "#68cc58"
              }
            },
            "reason": null
          }
        ],
        "relatedIssues": [
          {
            "requested": "ENG-42",
            "status": "resolved",
            "resolved": {
              "id": "issue-42",
              "identifier": "ENG-42",
              "title": "Auth incident follow-up",
              "url": "https://linear.app/test-team/issue/ENG-42/auth-incident-follow-up",
              "state": {
                "name": "In Progress",
                "color": "#f87462"
              }
            },
            "reason": null
          }
        ]
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Would create issue in ENG",
    "refs": {
      "teamKey": "ENG",
      "project": null,
      "parentIssueIdentifier": null,
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "title",
      "description",
      "assigneeId",
      "dueDate",
      "parent",
      "priority",
      "estimate",
      "labelIds",
      "teamId",
      "projectId",
      "projectMilestoneId",
      "cycleId",
      "stateId",
      "useDefaultTemplate"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "suggest-only",
      "semantics": {
        "requiresDryRun": true,
        "allowsMutation": false,
        "allowsTriageApply": false
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Output With Applied Triage 1`] = `
stdout:
'{
  "id": "issue-new-triage",
  "identifier": "ENG-778",
  "title": "Customer reports auth refresh failures",
  "url": "https://linear.app/test-team/issue/ENG-778/customer-reports-auth-refresh-failures",
  "dueDate": null,
  "assignee": null,
  "parent": null,
  "state": {
    "name": "Triage",
    "color": "#f2c94c"
  },
  "sourceContext": {
    "version": "v1",
    "target": "description",
    "source": {
      "system": "slack",
      "ref": "C12345:1712382000.100200",
      "url": "https://example.slack.com/archives/C12345/p1712382000100200",
      "title": "Customer reports auth refresh failures",
      "capturedAt": "2026-04-12T10:00:00Z"
    },
    "title": null,
    "summary": "A customer thread reports repeated auth refresh failures after the latest deploy.",
    "participantCount": 2,
    "textBlockCount": 2,
    "attachmentCount": 1,
    "metadataKeys": [
      "customerId",
      "severity"
    ]
  },
  "autonomyPolicy": {
    "family": "source_intake_autonomy_policy",
    "version": "v1",
    "selected": "apply-allowed",
    "semantics": {
      "requiresDryRun": false,
      "allowsMutation": true,
      "allowsTriageApply": true
    }
  },
  "triage": {
    "family": "source_intake_triage",
    "version": "v1",
    "target": "issue.create",
    "applyRequested": true,
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    },
    "appliedChanges": [
      "team",
      "state",
      "labels"
    ],
    "suggestions": {
      "team": {
        "requested": "ENG",
        "status": "resolved",
        "resolved": {
          "id": "team-eng-id",
          "key": "ENG",
          "name": "Engineering"
        },
        "applied": true,
        "reason": null
      },
      "state": {
        "requested": "triage",
        "status": "resolved",
        "resolved": {
          "id": "state-triage",
          "name": "Triage",
          "type": "triage",
          "color": "#f2c94c"
        },
        "applied": true,
        "reason": null
      },
      "labels": [
        {
          "requested": "customer",
          "status": "resolved",
          "resolved": {
            "id": "label-customer",
            "name": "customer",
            "color": "#f87462"
          },
          "applied": true,
          "reason": null
        },
        {
          "requested": "incident",
          "status": "resolved",
          "resolved": {
            "id": "label-incident",
            "name": "incident",
            "color": "#f2c94c"
          },
          "applied": true,
          "reason": null
        }
      ],
      "duplicateCandidates": [
        {
          "requested": "ENG-88",
          "status": "resolved",
          "resolved": {
            "id": "issue-88",
            "identifier": "ENG-88",
            "title": "Previous auth bug",
            "url": "https://linear.app/test-team/issue/ENG-88/previous-auth-bug",
            "state": {
              "name": "Done",
              "color": "#68cc58"
            }
          },
          "reason": null
        }
      ],
      "relatedIssues": [
        {
          "requested": "ENG-42",
          "status": "resolved",
          "resolved": {
            "id": "issue-42",
            "identifier": "ENG-42",
            "title": "Auth incident follow-up",
            "url": "https://linear.app/test-team/issue/ENG-42/auth-incident-follow-up",
            "state": {
              "name": "In Progress",
              "color": "#f87462"
            }
          },
          "reason": null
        }
      ]
    }
  },
  "receipt": {
    "operationId": "issue.create",
    "resource": "issue",
    "action": "create",
    "resolvedRefs": {
      "issueIdentifier": "ENG-778",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": "Triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "appliedChanges": [
      "title",
      "description",
      "labels",
      "state"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "sourceProvenance": {
      "version": "v1",
      "target": "description",
      "source": {
        "system": "slack",
        "ref": "C12345:1712382000.100200",
        "url": "https://example.slack.com/archives/C12345/p1712382000100200",
        "title": "Customer reports auth refresh failures",
        "capturedAt": "2026-04-12T10:00:00Z"
      },
      "contextIds": {
        "customerId": "cust_123"
      },
      "evidenceRefs": [
        "https://example.com/auth-refresh.log"
      ],
      "relatedUrls": [
        "https://example.slack.com/archives/C12345/p1712382000100200",
        "https://example.com/auth-refresh.log"
      ],
      "participantHandles": [
        "alice",
        "bob"
      ],
      "metadataKeys": [
        "customerId",
        "severity"
      ],
      "triage": {
        "applied": true,
        "team": "ENG",
        "state": "triage",
        "labels": [
          "customer",
          "incident"
        ],
        "duplicateIssueRefs": [
          "ENG-88"
        ],
        "relatedIssueRefs": [
          "ENG-42"
        ]
      }
    },
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Created issue ENG-778",
    "refs": {
      "issueIdentifier": "ENG-778",
      "teamKey": "ENG",
      "assignee": null,
      "parentIssueIdentifier": null,
      "state": "Triage",
      "sourceSystem": "slack",
      "sourceRef": "C12345:1712382000.100200"
    },
    "changes": [
      "title",
      "description",
      "labels",
      "state"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry",
    "autonomyPolicy": {
      "family": "source_intake_autonomy_policy",
      "version": "v1",
      "selected": "apply-allowed",
      "semantics": {
        "requiresDryRun": false,
        "allowsMutation": true,
        "allowsTriageApply": true
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Validation Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot use machine-readable output with --start",
    "suggestion": "Use --dry-run for machine-readable previews, or pass --text --start when you want to start work immediately.",
    "context": "Failed to create issue"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - Description Parse Guidance 1`] = `
stdout:
""
stderr:
\`✗ Failed to create issue: Missing value for option "--description".
  If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.
\`
`;

snapshot[`Issue Create Command - JSON Description Parse Guidance 1`] = `
stdout:
\`{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Missing value for option \\\\"--description\\\\".",
    "suggestion": "If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.",
    "context": "Failed to create issue"
  }
}
\`
stderr:
""
`;

snapshot[`Issue Create Command - JSON Plan Limit Failure 1`] = `
stdout:
\`{
  "success": false,
  "error": {
    "type": "graphql_error",
    "message": "You've reached the issue limit for the free plan. Upgrade or archive issues to continue.",
    "suggestion": "Upgrade your Linear plan or archive existing items and retry.",
    "context": "Failed to create issue"
  }
}
\`
stderr:
""
`;

snapshot[`Issue Create Command - JSON Rate Limit Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "graphql_error",
    "message": "GraphQL Error (Code: 429): {\\\\"response\\\\":{\\\\"status\\\\":429,\\\\"headers\\\\":{}},\\\\"request\\\\":{\\\\"query\\\\":\\\\"mutation CreateIssue(\$input: IssueCreateInput!) {\\\\\\\\n  issueCreate(input: \$input) {\\\\\\\\n    success\\\\\\\\n    issue {\\\\\\\\n      id\\\\\\\\n      identifier\\\\\\\\n      title\\\\\\\\n      url\\\\\\\\n      dueDate\\\\\\\\n      assignee {\\\\\\\\n        id\\\\\\\\n        name\\\\\\\\n        displayName\\\\\\\\n        initials\\\\\\\\n      }\\\\\\\\n      parent {\\\\\\\\n        id\\\\\\\\n        identifier\\\\\\\\n        title\\\\\\\\n        url\\\\\\\\n        dueDate\\\\\\\\n        state {\\\\\\\\n          name\\\\\\\\n          color\\\\\\\\n        }\\\\\\\\n      }\\\\\\\\n      state {\\\\\\\\n        name\\\\\\\\n        color\\\\\\\\n      }\\\\\\\\n      team {\\\\\\\\n        key\\\\\\\\n      }\\\\\\\\n    }\\\\\\\\n  }\\\\\\\\n}\\\\",\\\\"variables\\\\":{\\\\"input\\\\":{\\\\"title\\\\":\\\\"Blocked by rate limit\\\\",\\\\"labelIds\\\\":[],\\\\"teamId\\\\":\\\\"team-eng-id\\\\",\\\\"useDefaultTemplate\\\\":true}}}}",
    "suggestion": "Retry after 60 seconds before creating more issues.",
    "context": "Failed to create issue",
    "details": {
      "rateLimit": {
        "retryAfter": "60",
        "limit": "5",
        "remaining": "0",
        "reset": "1711260000"
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - Rate Limit Failure 1`] = `
stdout:
"Creating issue in ENG

"
stderr:
'✗ Failed to create issue: GraphQL Error (Code: 429): {"response":{"status":429,"headers":{}},"request":{"query":"mutation CreateIssue(\$input: IssueCreateInput!) {\\\\n  issueCreate(input: \$input) {\\\\n    success\\\\n    issue {\\\\n      id\\\\n      identifier\\\\n      title\\\\n      url\\\\n      dueDate\\\\n      assignee {\\\\n        id\\\\n        name\\\\n        displayName\\\\n        initials\\\\n      }\\\\n      parent {\\\\n        id\\\\n        identifier\\\\n        title\\\\n        url\\\\n        dueDate\\\\n        state {\\\\n          name\\\\n          color\\\\n        }\\\\n      }\\\\n      state {\\\\n        name\\\\n        color\\\\n      }\\\\n      team {\\\\n        key\\\\n      }\\\\n    }\\\\n  }\\\\n}","variables":{"input":{"title":"Blocked by rate limit","labelIds":[],"teamId":"team-eng-id","useDefaultTemplate":true}}}}
  Retry after 60 seconds before creating more issues.
'
`;

snapshot[`Issue Create Command - With Milestone 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-789/test-milestone-feature
"
stderr:
""
`;

snapshot[`Issue Create Command - Case Insensitive Label Matching 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-456/test-case-insensitive-labels
"
stderr:
""
`;

snapshot[`Issue Create Command - Short Flag -p Is Priority 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-999/test-priority-flag
"
stderr:
""
`;

snapshot[`Issue Create Command - With Cycle 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-890/test-cycle-feature
"
stderr:
""
`;
